Completed most of Home view

--- a/src/app/footer.component.html
+++ b/src/app/footer.component.html
@@ -1,8 +1,3 @@
-<p>
-  footer works!
-</p>
-
-
 <footer>
     <div id="footer-content">  
         <div class="footer-grey"> 
@@ -16,7 +11,7 @@
                     
                 </ul>
                 
-                <p class="monospace">&copy; <script>document.write(new Date().getFullYear())</script> Never Summer Industries. All rights Reserved. Website by <a href="http://www.creationchamber.com" target="_blank">Creation Chamber</a></p>
+                <p class="monospace">&copy; 2016 Never Summer Industries. Cloned as a personal project. Built by <a href="http://www.gustavnordstrom.com" target="_blank">Gustav Nordstrom</a></p>
             </div>
         </div>
     </div>    
