--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+// @import './assets/css/responsive';
+
 /* 1. General Styles */		
 	
 	html,body{
@@ -608,6 +610,113 @@
 	
 
 
+/*--------------------------
+         Our Team 
+---------------------------*/
+
+
+.our-team {
+	display:block;
+	margin:0px;
+	// width:1380px;
+	text-align:center;
+	margin-left:-50px;
+}
+
+.our-team li.team-member {
+	width:360px;
+	height:440px;
+	margin:0 48px 70px 48px ;
+	list-style:none;
+	display:inline-block;
+	background-size:contain;
+	background-repeat:no-repeat;		
+}
+
+.team-overflow {
+	width:360px;
+	height:440px;
+	overflow:hidden;
+	position:absolute;
+	text-align:left;
+	transition:all 0.3s ease 0s;
+	-moz-transition:all 0.3s ease 0s;
+	-webkit-transition:all 0.3s ease 0s;
+	-o-transition:all 0.3s ease 0s;
+}
+
+.team-info {
+	width:300px;
+	height:300px;
+	background: rgba(255,255,255,1);
+	padding:30px;
+	margin-top:360px;
+	position:absolute;
+	transition:all 0.3s ease 0s;
+	-moz-transition:all 0.3s ease 0s;
+	-webkit-transition:all 0.3s ease 0s;
+	-o-transition:all 0.3s ease 0s;
+}
+
+.our-team li:hover  .team-info {
+	margin-top:0px;
+	padding-top:50px;
+	background: rgba(255,255,255,0.9);	
+}
+
+.team-name {
+	margin-bottom:2px;
+	text-transform:uppercase;
+}
+
+.team-function {
+	margin-bottom:40px;
+}
+
+.team-description {
+	margin-bottom:20px;
+}
+
+.socials {	
+	margin: 0 0 20px;
+	display:block;
+	width:100%;
+}
+
+.socials li {
+	list-style:none;
+	display:inline-block;
+	margin-left: -4px;
+}
+
+.socials li:first-child {
+	margin-left: 3px;
+}
+
+.socials li:first-child a {
+	padding-left: 0px;
+}
+
+.socials li a {
+	border-right: 1px dotted rgba(0, 0, 0, 0.2);
+	padding:0 20px;
+	color: #000;
+	display: block;
+	font-size: 16px;
+	height: 16px;
+	line-height: 10px;
+	width:20px;
+}
+
+.socials li:last-child a {
+	border-right: none;
+}
+
+.socials li a:hover {
+	color:#e11f26;
+}
+
+
 
 
 
@@ -616,220 +725,169 @@
 ---------------------------------------------------*/			
 			
 @media only screen and (max-width: 1466px) {
-	
 	.container {
 		width:940px;
 	}
-	
 	#header-wrapper {
 		width: 940px;
 	}
-	
 	#search-box {
 		width:100%;
 	}
-
 	#blog-post {
 		padding:0 100px;
 	}
-	
 	.our-team {
 		width:1000px;
 		margin-left:-30px;
 	}
-	
 	.our-team li.team-member {
 		width:300px;
 		height:380px;
 		margin:0 9px 70px 9px ;
 	}
-	
 	.team-overflow {
 		width:300px;
 		height:380px;
 	}
-	
 	.team-info {
 		width:260px;
 		height:300px;
 		padding:20px 30px;
 		margin-top:300px;
 	}
-
 	.our-team li:hover  .team-info {
 		padding-top:30px;	
 	}
-	
 	.padding-box {
 		padding:0 150px;
 	}
-	
-
 }
 
-
 @media only screen and (max-width: 1024px) {
-	
 	.container {
 		width:600px;
 	}
-	
 	.page-title {
 		width:100%;
 	}
-	
 	#header-wrapper {
 		width: 600px;
 	}
-	
 	#secondary-menu {
 		display:none;
 	}
-	
 	.clapat-menubtn {
-		display:block;
+		display:block !important;
 	}
-	
 	.menu-socials {
 		display:none;
 	}
-	
 	.menu-copyright {
 		display:none;
 	}
-	
 	#hero img {
 		width:100%;
 	}
-	
 	.prev-project {
 		width:0;
 	}
-	
 	.next-project {
 		width:0;
 	}
-	
 	#contact-formular {
 		width:600px;
 	}
-	
 	#contact-info {
 		max-height:1000px;
 		left:0;
 		margin-left:0;
 		width:100%;
 	}
-	
 	.one_half {
     	width: 100%;
 	}	
-
 	.one_third {
 		width: 100%;
 	}	
-
 	.one_fourth {
 		width: 100%;
 	}	
-
 	.one_fifth {
 		width: 100%;
 	}	
-
 	.one_sixth {
 		width: 100%;
 	}	
-
 	.two_fifth {
 		width: 100%;
 	}	
-
 	.two_fourth {
 		width: 100%;
 	}		
-
 	.two_third {
 		width: 100%;
 	}	
-
 	.three_fifth {
 		width: 100%;
 	}	
-
 	.three_fourth {
 		width: 100%;
 	}	
-
 	.four_fifth {
 		width: 100%;
 	}	
-
 	.five_sixth {
 		width: 100%;
 	}	
-
 	.one_half, .one_third, .two_third, .three_fourth, .one_fourth, .two_fourth, .one_fifth, .two_fifth, .three_fifth, .four_fifth, .one_sixth, .five_sixth {
 		margin-bottom: 20px;
 		margin-right: 0%;
 	}
-	
 	.item.item-gap {
 		display:none;
 	}
-	
 	.post-image {
 		opacity:1;
 	}
-	
 	.meta-categories.title-has-line:after {
 		background: none repeat scroll 0 0 #555;
 	}
-	
 	.post-title {
 		color:#fff;
 	}
-	
 	.post .overlay {
 		background-color:rgba(0,0,0,0.7);
 	}
-	
 	.post {
 		margin-bottom:50px;
 	}
-	
 	#blog-post {
 		padding:0;
 	}
-	
 	.our-team {
 		width:100%;
 		margin-left:0px;
 	}
-	
 	.our-team li.team-member {
 		width:400px;
 		height:480px;
 		margin:0 48px 70px 48px ;
 	}
-	
 	.team-overflow {
 		width:400px;
 		height:480px;
 	}
-	
 	.team-info {
 		width:340px;
 		height:340px;
 		padding:30px;
 		margin-top:400px;
-	}
-
+    }
 	.our-team li:hover  .team-info {
 		margin-top:0px;
 		padding-top:50px;
 	}
-	
 	.clapat-counter {
 		border-bottom: 1px solid #f0f0f0;
 		border-right: 0 none;
@@ -843,134 +901,125 @@
 		text-align: left;
 		width: 100%;
 	}
-	
 	.text-socials-minimal {
 		float:left;
 	}
-	
 	.padding-box {
 		padding:0px;
 	}
-	
 	#footer-content .container {
 		text-align:left;
 	}
-	
 	ul.text-socials {
 		text-align: left;
 	}
-	
 	ul.text-socials li {
 		margin: 0 20px 40px 0;
 	}
-	
 	.space-buttons {
 		display: block;
 		width:100%;
 	}
-	
 	.parallax {
 		background-position: center top !important;
 		background-attachment: scroll !important;
 		height: auto;		
 		width: 100%;
 	}
-	
-	
+
+	#portfolio {
+		max-width: 640px;
+		// max-height: 680px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	// .portfolio-img {
+	// 	max-width: 280px;
+	// 	max-height: 200px;
+	// }
+
 }
 
-
 @media only screen and (max-width: 767px) {
-	
 	.container {
 		width:400px;
 	}
-	
 	#header-wrapper {
 		width: 400px;
 	}
-	
 	.post-title {
 		font-size:30px;
 		line-height:36px;
 	}
-	
 	#contact-formular {
 		width:400px;
 	}
-	
 	input#search {
 		background:#f5f5f5;
 		background-image:none;
 	}
-	
 	.user_comment_reply {
 		margin-left: -80px;
 	}
-	
 	.post-share {
 		margin-left: -10px;
 		position: relative;
 	}
-	
 	.our-team li.team-member {
 		margin:0 0px 70px 0px ;
 	}
-	
 	#filters {
 		max-height:500px;
 		position:relative;
 	}
-	
 	#filters li {
 		display: block;
 		margin: 0 10px 10px;
 	}
-	
 	#filters li:last-child {
 		padding-bottom:150px;
 	}
-	
 	.page-error {
 		margin:0;
 	}
-	
 	.blink_me {
 		font-size:60px;
 		line-height:60px;
 	}
-	
+	#portfolio {
+		max-width: 640px;
+		max-height: 680px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.portfolio-img {
+		max-width: 280px;
+		max-height: 200px;
+	}
+
 }
 
-
 @media only screen and (max-width: 479px) {
-	
 	.container {
 		width:240px;
 	}
-	
 	#header-wrapper {
 		width: 240px;
 	}
-	
 	.item:hover .padding-overlay {
 		padding:10px;
 	}
-	
 	#contact-formular {
 		width:240px;
 	}
-	
 	.our-team li.team-member {
 		width:240px;
 		height:320px;
 	}
-	
 	.team-overflow {
 		width:240px;
 		height:320px;
 	}
-	
 	.team-info {
 		width:300px;
 		height:300px;
@@ -985,6 +1034,15 @@
 	.our-team li:hover  .team-info {
 		padding-top:30px;	
 	}
-	
-		
-}			
+	#portfolio {
+		max-width: 280px;
+		max-height: 1040px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.portfolio-img {
+		max-width: 240px;
+		max-height: 170px;
+		margin-bottom: 200px;
+	}
+}		
