--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -2,7 +2,7 @@
     <div id="header-wrapper">
         <!-- NS Logo -->
         <div id="logo">
-          <a href="#"><img src="../assets/img/logo.png" alt="Never Summer Industries"></a>
+          <a [routerLink]="['']"><img src="../assets/img/logo.png" alt="Never Summer Industries"></a>
         </div>
 
         <!-- Menu Button-->
