--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 // @import './assets/css/responsive';
+// @import './assets/css/ModuleStyleSheets';
 
 /* 1. General Styles */		
 	
