Added top images to all main views

--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -1,3 +1,5 @@
-<p>
-  apparel works!
-</p>
+<div id="content">
+  <div id="top-img">
+		<img src="../../assets/img/apparel/ApparelHero.jpg" alt="">
+	</div>
+</div>
