--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -1,3 +1,5 @@
-<p>
-  longboards works!
-</p>
+<div id="content">
+  <div id="top-img">
+		<img src="../../assets/img/longboards/_longb.jpg" alt="">
+	</div>
+</div>
