--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,3 +1,5 @@
-<p>
-  company works!
-</p>
+<div id="content">
+  <div id="top-img">
+		<img src="../../assets/img/company/Slide-NeverSummer-3.jpg" alt="">
+	</div>
+</div>
