--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -18,9 +18,9 @@
                 <li><a [routerLink]="['snowboards']">Snowboards</a>
                     <ul>
                         <li><a [routerLink]="['snowboards']">Snowboard Home</a></li>
-                        <li><a href="snowboards/videos.html">Snowboard Videos</a></li>
-                        <li><a href="snowboards/tech.html">Snowboard Tech</a></li>
-                        <li><a href="snowboards/team.html">Snowboard Team</a></li>
+                        <li><a [routerLink]="['snowboards/videos']">Snowboard Videos</a></li>
+                        <li><a [routerLink]="['snowboards/tech']">Snowboard Tech</a></li>
+                        <li><a [routerLink]="['snowboards/team']">Snowboard Team</a></li>
                     </ul>
                 </li>
                 <li><a [routerLink]="['longboards']">Longboards</a>
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li><a [routerLink]="['apparel']">Apparel</a></li>
-                <li><a [routerLink]="['calendar']">Calendar</a></li>
+                <li><a [routerLink]="['company/calendar']">Calendar</a></li>
                 <li><a [routerLink]="['company']">Company</a>
                     <ul>
                         <li><a href="company/dealers.html">Dealers</a></li>
