Added top image parallax to Snowboard and Longboard view, and completed most of longboard home view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <div id="content">
-	<div id="top-img">
+	<!--<div id="top-img">
 		<img src="../../assets/img/home/1101HomeHero.jpg" alt="">
-	</div>
+	</div>-->
+	<div class="top-parallax" style="background-image:url('../../../assets/img/home/1101HomeHero.jpg')"></div>
+
 	
 	<div id="main">
 		<div class="container">
