--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,10 +2,18 @@
 	background-color:#f8f8f8;
 	// height: 300px;
 }
-#top-img {
-	width: 100%;
-	height: 100%px;
-	// background-color: black;
+// #top-img {
+// 	width: 100%;
+// 	height: 100%px;
+// 	// background-color: black;
+// }
+.top-parallax {
+    height: 700px;
+    top: 120px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /*--------------------------------------------------
