--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -1,5 +1,133 @@
 <div id="content">
-  <div id="top-img">
+  <!--<div id="top-img">
 		<img src="../../assets/img/longboards/_longb.jpg" alt="">
+	</div>-->
+
+	<div class="top-parallax" style="background-image:url('../../../assets/img/longboards/_longb.jpg')"></div>
+
+	<div id="main">
+		<h1 class="title-has-line text-align-center">Longboards</h1>
+
+				<!-- Longboard info goes here, pull from database instead of hardcode -->
+	
+
+		<h2 style="text-align: center;">Longboard Content Goes here from DB</h2>
+
+
+		<div class="container">
+			<hr>
+			<section class="parallax" style="background-image: url('../../../assets/img/longboards/longboards-1.jpg');">
+				<div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+					<h3 class="title-has-line white">News Feed</h3>
+				</div>
+			</section>
+			
+			<hr>
+
+			<ul class="our-team">
+
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/Wingmanedit-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Everyone needs a Wingman!</h5>
+									<p class="monospace title-has-line team-function">16-May-2016</p>
+									<p class="team-description">New Never Summer Wingman!</p>
+									<a href="../news-feed/everyone-needs-a-wingman.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/dimevideo16-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">New Never Summer Dime</h5>
+									<p class="monospace title-has-line team-function">20-Apr-2016</p>
+									<p class="team-description">The Dime is the perfect slash and stash deck!</p>
+									<a href="../news-feed/new-never-summer-dime.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/factory_april12-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Factory</h5>
+									<p class="monospace title-has-line team-function">12-Apr-2016</p>
+									<p class="team-description">See how the most durable longboards are made!</p>
+									<a href="../news-feed/never-summer-factory.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/eljefereview-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Try the El Jefe</h5>
+									<p class="monospace title-has-line team-function">08-Mar-2016</p>
+									<p class="team-description">Review from Tye Donneley, Oceanside, CA </p>
+									<a href="../news-feed/el-jefe.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/tyepost-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Tye Donnely</h5>
+									<p class="monospace title-has-line team-function">19-Aug-2015</p>
+									<p class="team-description">Longboarding Colorado</p>
+									<a href="../news-feed/tye-donnely.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/wood-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Woodward Summer Camps</h5>
+									<p class="monospace title-has-line team-function">10-Jul-2015</p>
+									<p class="team-description">Never Summer goes to camp...</p>
+									<a href="../news-feed/woodward-summer-camps.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/chase-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Chase Blackwell in the Pools</h5>
+									<p class="monospace title-has-line team-function">07-Jul-2015</p>
+									<p class="team-description">Chase Blackwell tearing it up on our pool deck, the Revival</p>
+									<a href="../news-feed/chase-blackwell-in-the-pools.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/2poker-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Poker Run</h5>
+									<p class="monospace title-has-line team-function">19-Jun-2015</p>
+									<p class="team-description">Never Summer Poker Run through Denver Highlands</p>
+									<a href="../news-feed/never-summer-poker-run.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/newsfeed/lyle-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Rider Lyle Killin It</h5>
+									<p class="monospace title-has-line team-function">15-Jun-2015</p>
+									<p class="team-description">Never Summer team rider, Lyle, killin' it down Lookout Mountain</p>
+									<a href="../news-feed/never-summer-rider-lyle-killin-it.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<ul id="webapp38150pagination" class="pagination webapp">
+							<li class="pag-current">1</li>
+							<li class="pag-number"><a href="#">2</a></li>
+							<li class="pag-next"><a href="#">Next</a></li>
+						</ul>
+
+
+					</ul>
+
+
+		</div>
+
 	</div>
+
 </div>
