--- a/src/app/longboards/longboards.component.scss
+++ b/src/app/longboards/longboards.component.scss
@@ -2,8 +2,65 @@
 	background-color:#f8f8f8;
 	// height: 300px;
 }
-#top-img {
+// #top-img {
+// 	width: 100%;
+// 	height: 100%px;
+// 	// background-color: black;
+// }
+
+.top-parallax {
+    height: 700px;
 	width: 100%;
-	height: 100%px;
-	// background-color: black;
+    top: 10px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#main {
+    margin-top: 50px;
+}
+
+// News Feed Parallax
+section {
+	margin-left: -50%;
+	padding-left: 50%;
+	padding-right: 50%;
+	position: relative;
+	width: 100%;
+	z-index: 0;
+	display: inline-block;
+}
+
+section .overlay {
+	margin-left: -50%;
+	padding-left: 50%;
+	padding-right: 50%;
+	padding-top:150px;
+	padding-bottom:150px;
+	position: relative;
+	width: 100%;
+}
+
+.parallax {
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-position:center center;
+	background-repeat:no-repeat;
+	background-attachment: fixed !important;
+}
+
+/*pagination*/
+ul.pagination {
+	margin: 0;
+	padding: 0;
+}
+
+ul.pagination li {
+	display: inline;
+	list-style: none;
+	margin: 0 2px;
 }
