Created longboard components and setup all routing, updated header links

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -26,9 +26,9 @@
                 <li><a [routerLink]="['longboards']">Longboards</a>
                     <ul>
                         <li><a [routerLink]="['longboards']">Longboard Home</a></li>
-                        <li><a href="longboards/videos.html">Longboard Videos</a></li>
-                        <li><a href="longboards/tech.html">Longboard Tech</a></li>
-                        <li><a href="longboards/team.html">Longboard Team</a></li>
+                        <li><a [routerLink]="['longboards/videos']">Longboard Videos</a></li>
+                        <li><a [routerLink]="['longboards/tech']">Longboard Tech</a></li>
+                        <li><a [routerLink]="['longboards/team']">Longboard Team</a></li>
                     </ul>
                 </li>
                 <li><a [routerLink]="['apparel']">Apparel</a></li>
