Completed Longboards/Videos view

--- a/src/app/longboards/longboards-videos/longboards-videos.component.html
+++ b/src/app/longboards/longboards-videos/longboards-videos.component.html
@@ -1,3 +1,163 @@
-<p>
-  longboards-videos works!
-</p>
+<div id="content">
+  <!--<div id="content-ajax">-->
+      <div id="main">
+        <div class="container">
+          <h1 class="title-has-line text-align-center">Longboard Videos</h1>
+
+          <ul class="our-team">
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/chase-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Chase Blackwell in the Pools</h5>
+									<p class="monospace title-has-line team-function">07-Jul-2015</p>
+									<p class="team-description">Chase Blackwell tearing it up on our pool deck, the Revival</p>
+									<a href="../news-feed/chase-blackwell-in-the-pools.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/lb1-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Copper 2 Frisco Party</h5>
+									<p class="monospace title-has-line team-function">02-Mar-2015</p>
+									<p class="team-description">Longboard party at Copper to Frisco</p>
+									<a href="../news-feed/copper-2-frisco-party.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/lbedit-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Copper to Frisco</h5>
+									<p class="monospace title-has-line team-function">02-Mar-2015</p>
+									<p class="team-description">Longboard Edit</p>
+									<a href="../news-feed/copper-to-frisco.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/Wingmanedit-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Everyone needs a Wingman!</h5>
+									<p class="monospace title-has-line team-function">16-May-2016</p>
+									<p class="team-description">New Never Summer Wingman!</p>
+									<a href="../news-feed/everyone-needs-a-wingman.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/woodward-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Funnest place on Earth</h5>
+									<p class="monospace title-has-line team-function">01-Feb-2015</p>
+									<p class="team-description">Never Summer at Woodward at Copper camp!</p>
+									<a href="../news-feed/funnest-place-on-earth.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/jesse-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Jesse on the Revival</h5>
+									<p class="monospace title-has-line team-function">19-May-2015</p>
+									<p class="team-description">Jesse Mondragon on the Revival</p>
+									<a href="../news-feed/jesse-on-the-revival.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/factory_april12-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Factory</h5>
+									<p class="monospace title-has-line team-function">12-Apr-2016</p>
+									<p class="team-description">See how the most durable longboards are made!</p>
+									<a href="../news-feed/never-summer-factory.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/open-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Factory Open House</h5>
+									<p class="monospace title-has-line team-function">16-May-2015</p>
+									<p class="team-description">Factory Open House - come play games, demo longboards, factory tours, free giveaways and more!</p>
+									<a href="../news-feed/never-summer-factory-open-house.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/2poker-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Poker Run</h5>
+									<p class="monospace title-has-line team-function">19-Jun-2015</p>
+									<p class="team-description">Never Summer Poker Run through Denver Highlands</p>
+									<a href="../news-feed/never-summer-poker-run.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/lyle-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Never Summer Rider Lyle Killin It</h5>
+									<p class="monospace title-has-line team-function">15-Jun-2015</p>
+									<p class="team-description">Never Summer team rider, Lyle, killin' it down Lookout Mountain</p>
+									<a href="../news-feed/never-summer-rider-lyle-killin-it.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/dimevideo16-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">New Never Summer Dime</h5>
+									<p class="monospace title-has-line team-function">20-Apr-2016</p>
+									<p class="team-description">The Dime is the perfect slash and stash deck!</p>
+									<a href="../news-feed/new-never-summer-dime.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/poker-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">NS Poker Run 2014</h5>
+									<p class="monospace title-has-line team-function">01-Mar-2015</p>
+									<p class="team-description">Never Summer Longboard Poker Run in Denver CO...</p>
+									<a href="../news-feed/ns-poker-run-2014.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/tyepost-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Tye Donnely</h5>
+									<p class="monospace title-has-line team-function">19-Aug-2015</p>
+									<p class="team-description">Longboarding Colorado</p>
+									<a href="../news-feed/tye-donnely.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/fam-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Welcome to the Family</h5>
+									<p class="monospace title-has-line team-function">02-Mar-2015</p>
+									<p class="team-description">This is Never Summer...</p>
+									<a href="../news-feed/welcome-to-the-family.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/longboards/videos/wood-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Woodward Summer Camps</h5>
+									<p class="monospace title-has-line team-function">10-Jul-2015</p>
+									<p class="team-description">Never Summer goes to camp...</p>
+									<a href="../news-feed/woodward-summer-camps.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+
+        </div>
+      </div>
+  <!--</div>-->
+</div>
