--- a/src/app/longboards/longboards-videos/longboards-videos.component.html
+++ b/src/app/longboards/longboards-videos/longboards-videos.component.html
@@ -1,5 +1,7 @@
 <div id="content">
   <!--<div id="content-ajax">-->
+	<div class="top-parallax" style="background-image:url('../../../assets/img/longboards/videos/longboard-video-hero.jpg')"></div>
+
       <div id="main">
         <div class="container">
           <h1 class="title-has-line text-align-center">Longboard Videos</h1>
