--- a/src/app/longboards/longboards-videos/longboards-videos.component.scss
+++ b/src/app/longboards/longboards-videos/longboards-videos.component.scss
@@ -1,3 +1,13 @@
+.top-parallax {
+    height: 700px;
+    top: 120px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
 #main {
-    padding: 200px;
+    padding: 50px;
 }
