--- a/src/app/snowboards/snowboards-videos/snowboards-videos.component.html
+++ b/src/app/snowboards/snowboards-videos/snowboards-videos.component.html
@@ -1,10 +1,12 @@
 <div id="content">
   <!--<div id="content-ajax">-->
-      <div id="main">
-        <div class="container">
-          <h1 class="title-has-line text-align-center">Snowboard Videos</h1>
+	<div class="top-parallax" style="background-image:url('../../../assets/img/snowboards/videos/snowboard-video-hero.jpg')"></div>
 
-          <ul class="our-team">
+	<div id="main">
+		<div class="container">
+			<h1 class="title-has-line text-align-center">Snowboard Videos</h1>
+
+			<ul class="our-team">
 						<li class="team-member" style="background-image:url('../../../assets/img/snowboards/videos/1-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.png');">
 							<div class="team-overflow">
 								<div class="team-info">
@@ -307,9 +309,8 @@
 						</li>
 					</ul>
 
-
-        </div>
-      </div>
+		</div>
+	</div>
 
   <!--</div>-->
 </div>
