--- a/src/app/snowboards/snowboards.component.scss
+++ b/src/app/snowboards/snowboards.component.scss
@@ -4,8 +4,8 @@
 
 
 .top-parallax {
-    height: 650px;
-    top: 120px;
+    height: 690px;
+    // top: 120px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -14,6 +14,7 @@
 
 #main {
     margin-top: 10px;
+	padding: 40px;
 }
 
 
