--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -38,8 +38,8 @@
                         <li><a href="company/dealers.html">Dealers</a></li>
                         <li><a href="company/warranty.html">Warranty / Ticket to Shred Registration</a></li>
                         <li><a href="company/news.html">News Feed</a></li>
-                        <li><a href="company/index.html">About Us</a> </li>
-                        <li><a href="company/contact.html">Contact Us</a></li>
+                        <li><a [routerLink]="['company']">About Us</a> </li>
+                        <li><a [routerLink]="['company/contact']">Contact Us</a></li>
                         <li><a href="company/moto.html">Moto</a></li>
                         <li><a href="http://www.scsunlimited.com/sled-wraps/signature-series/never-summer.html" target="_blank">Snowmobile Wraps</a></li>
                     </ul>
