Completed Contact Us view

--- a/src/app/company/company-contact/company-contact.component.html
+++ b/src/app/company/company-contact/company-contact.component.html
@@ -1,3 +1,20 @@
-<p>
-  company-contact works!
-</p>
+<div id="content">
+  <!--<div id="content-ajax">-->
+    <div id="main">
+    <div class="container">
+      <h1 class="title-has-line">Contact Us</h1>
+      <div class="one_third">
+        <br />
+        <p class="monospace"><i class="fa fa-map-marker"></i> Address</p>
+        <h5 class="title-has-line">3838 Eudora Way, Denver, CO 80207 USA</h5>
+        <p class="monospace"><i class="fa fa-paper-plane"></i> Email</p>
+        <h5 class="title-has-line">info@neversummer.com</h5> 
+      </div>
+      <div class="two_third last contact-bottom">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12266.475277877938!2d-104.93030700000008!3d39.770666000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c7980c1044aaf%3A0x3cbdcbfb6d2d8bda!2sNever+Summer+Industries!5e0!3m2!1sen!2sus!4v1424883592966" width="100%" height="400" frameborder="0" style="border:0"></iframe>
+      </div>
+  <!--</div>-->
+    </div>
+
+  </div>
+</div>
