Created Company/Moto component and updated header links, setup routing

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -40,7 +40,7 @@
                         <li><a href="company/news.html">News Feed</a></li>
                         <li><a [routerLink]="['company']">About Us</a> </li>
                         <li><a [routerLink]="['company/contact']">Contact Us</a></li>
-                        <li><a href="company/moto.html">Moto</a></li>
+                        <li><a [routerLink]="['company/moto']">Moto</a></li>
                         <li><a href="http://www.scsunlimited.com/sled-wraps/signature-series/never-summer.html" target="_blank">Snowmobile Wraps</a></li>
                     </ul>
                 </li>
