Completed Company/Moto view

--- a/src/app/company/company-moto/company-moto.component.html
+++ b/src/app/company/company-moto/company-moto.component.html
@@ -1,3 +1,51 @@
-<p>
-  company-moto works!
-</p>
+<div id="content">
+		<!--<div id="content-ajax">-->
+
+			<!--<div id="hero" class="hero-big opacity-hero dark-bg">
+				<div id="video-container">
+					<a id="stopmovie" title="Click To Pause"></a>
+					<a id="playmovie" style="background-image:url('../_photos/heros/moto.jpg');">
+						<div class="outer">
+							<div class="inner">
+								<div class="play-icon"><i class="fa fa-play"></i>
+								</div>
+							</div>
+						</div>
+					</a>
+					<a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=S8HO866ra7A&feature=youtube',containment:'#video-container', autoPlay:false, mute:true, opacity:1, showControls:false}"></a>
+				</div>
+			</div>-->
+
+      <div class="top-parallax" style="background-image:url('../../../assets/img/company/moto/moto.jpg')"></div>
+
+
+			<div id="main">
+				<div class="container">
+					<h1 class="title-has-line text-align-center">Moto</h1>
+					<ul class="our-team">
+						<li class="team-member" style="background-image:url('../../../assets/img/company/moto//thundervalley-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Thunder Valley</h5>
+									<p class="monospace title-has-line team-function">01-Jun-2015</p>
+									<p class="team-description">Never Summer goes to Thunder Valley</p>
+									<a href="../news-feed/thunder-valley.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+						<li class="team-member" style="background-image:url('../../../assets/img/company/moto//fam-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+							<div class="team-overflow">
+								<div class="team-info">
+									<h5 class="team-name">Welcome to the Family</h5>
+									<p class="monospace title-has-line team-function">02-Mar-2015</p>
+									<p class="team-description">This is Never Summer...</p>
+									<a href="../news-feed/welcome-to-the-family.html" class="clapat-button outline-button">Read More</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		<!--</div>-->
+	</div>
