Created company/warranty component, added routing and updated header link

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -36,7 +36,7 @@
                 <li><a [routerLink]="['company']">Company</a>
                     <ul>
                         <li><a href="company/dealers.html">Dealers</a></li>
-                        <li><a href="company/warranty.html">Warranty / Ticket to Shred Registration</a></li>
+                        <li><a [routerLink]="['company/warranty']">Warranty / Ticket to Shred Registration</a></li>
                         <li><a href="company/news.html">News Feed</a></li>
                         <li><a [routerLink]="['company']">About Us</a> </li>
                         <li><a [routerLink]="['company/contact']">Contact Us</a></li>
