Completed Company/News view

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,12 +1,6 @@
 <div id="content">
-  <div id="top-img">
-		<img src="../../assets/img/company/Slide-NeverSummer-3.jpg" alt="">
-    <div class="overlay" style="background-color:rgba(0,0,0,0.1)">
-						<div class="clapat-caption dark-bg">
-							<div class="caption-content bottom-left"></div>
-						</div>
-					</div>
-	</div>
+  <div class="top-parallax" style="background-image:url('../../../assets/img/company/Slide-NeverSummer-3.jpg')"></div>
+
 
   <div id="main">
     <div class="container">
