--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li><a href="company/dealers.html">Dealers</a></li>
                         <li><a [routerLink]="['company/warranty']">Warranty / Ticket to Shred Registration</a></li>
-                        <li><a href="company/news.html">News Feed</a></li>
+                        <li><a [routerLink]="['company/news']">News Feed</a></li>
                         <li><a [routerLink]="['company']">About Us</a> </li>
                         <li><a [routerLink]="['company/contact']">Contact Us</a></li>
                         <li><a [routerLink]="['company/moto']">Moto</a></li>
